--- a/student_server/application.yml
+++ b/student_server/application.yml
@@ -5,11 +5,15 @@ spring:
     username: root
     password: 123456
 
+  servlet:
+    multipart:
+      max-file-size: 10MB      # 单个文件最大
+      max-request-size: 10MB   # 总请求最大
+
 mybatis:
   type-aliases-package: com.auggie.student_server.entity
   mapper-locations: classpath:mapper/*.xml
-  configuration:
-    map-underscore-to-camel-case: true
 
 server:
   port: 10086
+
